@@ -17,33 +17,38 @@
 
 package org.radix;
 
-import com.google.common.collect.ImmutableMap;
+import org.apache.commons.cli.ParseException;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.bouncycastle.jce.provider.BouncyCastleProvider;
+import org.json.JSONObject;
+import org.radix.utils.IOUtils;
+
 import com.google.inject.Guice;
 import com.google.inject.Injector;
 import com.google.inject.Key;
 import com.google.inject.TypeLiteral;
+import com.radixdlt.ModuleRunner;
 import com.radixdlt.RadixNodeModule;
+import com.radixdlt.consensus.bft.BFTNode;
 import com.radixdlt.consensus.bft.Self;
 import com.radixdlt.counters.SystemCounters;
 import com.radixdlt.environment.Runners;
+import com.radixdlt.network.addressbook.PeerManager;
 import com.radixdlt.network.p2p.transport.PeerServerBootstrap;
 import com.radixdlt.utils.MemoryLeakDetector;
 import com.radixdlt.ModuleRunner;
 import com.radixdlt.consensus.bft.BFTNode;
 import com.radixdlt.properties.RuntimeProperties;
-
-import java.util.Map;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.apache.commons.cli.ParseException;
-import org.bouncycastle.jce.provider.BouncyCastleProvider;
-import org.json.JSONObject;
-import org.radix.utils.IOUtils;
+import com.radixdlt.utils.MemoryLeakDetector;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URISyntaxException;
 import java.security.Security;
+import java.util.HashMap;
+import java.util.Locale;
+import java.util.Map;
 import java.util.Properties;
 
 public final class Radix {
@@ -52,44 +57,56 @@ public final class Radix {
 	private static final String SYSTEM_VERSION_DISPLAY;
 	private static final String SYSTEM_VERSION_BRANCH;
 	private static final String SYSTEM_VERSION_COMMIT;
-	private static final ImmutableMap<String, Object> SYSTEM_VERSION_INFO;
+	private static final Map<String, Map<String, Object>> SYSTEM_VERSION_INFO;
 
-	public static final int 	PROTOCOL_VERSION 		= 100;
+	public static final int PROTOCOL_VERSION = 100;
 
-	public static final int 	AGENT_VERSION 			= 2710000;
-	public static final int 	MAJOR_AGENT_VERSION 	= 2709999;
-	public static final int 	REFUSE_AGENT_VERSION 	= 2709999;
-	public static final String 	AGENT 					= "/Radix:/" + AGENT_VERSION;
+	public static final int AGENT_VERSION = 2710000;
+	public static final int MAJOR_AGENT_VERSION = 2709999;
+	public static final int REFUSE_AGENT_VERSION = 2709999;
+	public static final String AGENT = "/Radix:/" + AGENT_VERSION;
+	public static final String SYSTEM_VERSION_KEY = "system_version";
 
 	static {
 		System.setProperty("java.net.preferIPv4Stack", "true");
 
-		String branch  = "unknown-branch";
-		String commit  = "unknown-commit";
-		String display = "unknown-version";
-		try (InputStream is = Radix.class.getResourceAsStream("/version.properties")) {
+		var branch = "unknown-branch";
+		var commit = "unknown-commit";
+		var display = "unknown-version";
+
+		var keys = new String[]{"VERSION_BUILD", "VERSION_BRANCH", "VERSION_BASE", "VERSION_BRANCHID",
+			"VERSION_BRANCHTYPE", "VERSION_COMMIT", "VERSION_GRADLE", "VERSION_DISPLAY", "VERSION_FULL",
+			"VERSION_SCM", "VERSION_TAG", "VERSION_LAST_TAG", "VERSION_DIRTY", "VERSION_VERSIONCODE",
+			"VERSION_MAJOR", "VERSION_MINOR", "VERSION_PATCH", "VERSION_QUALIFIER"};
+
+		var map = new HashMap<String, Object>();
+
+		try (var is = Radix.class.getResourceAsStream("/version.properties")) {
 			if (is != null) {
-				Properties p = new Properties();
+				var p = new Properties();
 				p.load(is);
-				branch  = p.getProperty("VERSION_BRANCH",  branch);
-				commit  = p.getProperty("VERSION_COMMIT",  commit);
+				branch = p.getProperty("VERSION_BRANCH", branch);
+				commit = p.getProperty("VERSION_COMMIT", commit);
 				display = p.getProperty("VERSION_DISPLAY", display);
+
+				for (var key : keys) {
+					var mapKey = key.split("_", 2)[1].toLowerCase(Locale.US);
+					var defaultValue = "unknown-" + mapKey;
+
+					map.put(mapKey, p.getProperty(key, defaultValue));
+				}
+
+				map.put("agent_version", AGENT_VERSION);
+				map.put("protocol_version", PROTOCOL_VERSION);
 			}
 		} catch (IOException e) {
 			// Ignore exception
 		}
+
 		SYSTEM_VERSION_DISPLAY = display;
-		SYSTEM_VERSION_BRANCH  = branch;
-		SYSTEM_VERSION_COMMIT  = commit;
-		SYSTEM_VERSION_INFO = ImmutableMap.of("system_version",
-			ImmutableMap.of(
-				"branch",           SYSTEM_VERSION_BRANCH,
-				"commit",           SYSTEM_VERSION_COMMIT,
-				"display",          SYSTEM_VERSION_DISPLAY,
-				"agent_version",    AGENT_VERSION,
-				"protocol_version", PROTOCOL_VERSION
-			)
-		);
+		SYSTEM_VERSION_BRANCH = branch;
+		SYSTEM_VERSION_COMMIT = commit;
+		SYSTEM_VERSION_INFO = Map.of(SYSTEM_VERSION_KEY, Map.copyOf(map));
 	}
 
 	private static final Logger log = LogManager.getLogger();
@@ -128,11 +145,13 @@ public final class Radix {
 	}
 
 	private static void logVersion() {
-		log.always().log("Radix distributed ledger '{}' from branch '{}' commit '{}'",
-			SYSTEM_VERSION_DISPLAY, SYSTEM_VERSION_BRANCH, SYSTEM_VERSION_COMMIT);
+		log.always().log(
+			"Radix distributed ledger '{}' from branch '{}' commit '{}'",
+			SYSTEM_VERSION_DISPLAY, SYSTEM_VERSION_BRANCH, SYSTEM_VERSION_COMMIT
+		);
 	}
 
-	public static ImmutableMap<String, Object> systemVersionInfo() {
+	public static Map<String, Map<String, Object>> systemVersionInfo() {
 		return SYSTEM_VERSION_INFO;
 	}
 
